<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
   >

    <View
        android:id="@+id/color_picker_preview"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="#FF000000"
        android:focusable="true"
        android:focusableInTouchMode="true">
    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/color_picker_label_r"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="R"
            android:textAlignment="viewEnd"
            android:textColor="#FFFF0000"
            />
        <SeekBar
            android:id="@+id/color_picker_seekbar_red"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:max="255"
            android:progress="0"
            android:layout_weight="0.70"/>
        <EditText
            android:id="@+id/textView_red_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:digits="0123456789"
            android:maxLength="3"
            android:layout_weight="0.20"
            android:text="0"
            android:imeOptions="actionDone"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/color_picker_label_g"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="G"
            android:textAlignment="viewEnd"
            android:textColor="#FF00FF00"
            />
        <SeekBar
            android:id="@+id/color_picker_seekbar_green"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:max="255"
            android:progress="0"
            android:layout_weight="0.70"
            app:thumbTint="#FF00FF00"/>

        <EditText
            android:id="@+id/textView_green_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:digits="0123456789"
            android:maxLength="3"
            android:layout_weight="0.20"
            android:text="0"
            android:imeOptions="actionDone"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/color_picker_label_b"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="B"
            android:textAlignment="viewEnd"
            android:textColor="#FF0000FF"
            />
        <SeekBar
            android:id="@+id/color_picker_seekbar_blue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:max="255"
            android:progress="0"
            android:layout_weight="0.70"
            app:thumbTint="#FF0000FF"
            android:tint="#FF0000FF"/>

        <EditText
            android:id="@+id/textView_blue_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:digits="0123456789"
            android:maxLength="3"
            android:layout_weight="0.20"
            android:text="0"
            android:imeOptions="actionDone"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/color_picker_label_a"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="A"
            android:textAlignment="viewEnd"
            android:textColor="#FF666666"
            />
        <SeekBar
            android:id="@+id/color_picker_seekbar_alpha"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:max="255"
            android:progress="255"
            android:layout_weight="0.70"
            app:thumbTint="#FF00FF00"/>
        <EditText
            android:id="@+id/textView_alpha_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:digits="0123456789"
            android:maxLength="3"
            android:layout_weight="0.20"
            android:text="0"
            android:imeOptions="actionDone"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:textAlignment="viewEnd"
            android:text="Hex Value: #"/>
        <EditText
            android:id="@+id/textView_hex_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLength="8"
            android:layout_weight="0.70"
            android:inputType="textNoSuggestions"
            android:singleLine="true"
            android:digits="0123456789ABCDEFabcdef"
            android:text="000000FF"
            android:imeOptions="actionDone"/>
    </LinearLayout>


</LinearLayout>