<resources>
    <string name="app_name">TU PaintZ</string>
    <string name="action_settings">Settings</string>
    <string name="color_picker_title">Pick your color:</string>
    <string name="color_picker_button_cancel">Cancel</string>
    <string name="color_picker_button_apply">Apply</string>
    <string name="color_picker_button_reset">Reset</string>
    <string name="text_picker_title">Write your text:</string>
    <string name="text_picker_button_cancel">Cancel</string>
    <string name="text_picker_button_apply">Apply</string>
    <string name="text_picker_button_reset">Reset</string>
</resources>
